@@ -66,7 +66,21 @@ Once the period is closed (i.e. the Accounting Period Delimiter is in delivered 
         </item>
         <item>
             <key> <string>permission</string> </key>
-            <value> <string></string> </value>
+            <value>
+              <none/>
+            </value>
+        </item>
+        <item>
+            <key> <string>searchable_text_property_id</string> </key>
+            <value>
+              <tuple>
+                <string>title</string>
+                <string>short_title</string>
+                <string>description</string>
+                <string>start_date</string>
+                <string>stop_date</string>
+              </tuple>
+            </value>
         </item>
         <item>
             <key> <string>title</string> </key>
@@ -75,6 +89,18 @@ Once the period is closed (i.e. the Accounting Period Delimiter is in delivered 
         <item>
             <key> <string>type_class</string> </key>
             <value> <string>AccountingTransaction</string> </value>
+        </item>
+        <item>
+            <key> <string>type_interface</string> </key>
+            <value>
+              <tuple/>
+            </value>
+        </item>
+        <item>
+            <key> <string>type_mixin</string> </key>
+            <value>
+              <tuple/>
+            </value>
         </item>
       </dictionary>
     </pickle>
